--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://unpkg.com; 
                  font-src 'self' https://fonts.gstatic.com; 
                  img-src 'self' data: https: http:; 
-                 connect-src 'self' http://localhost:8000 http://localhost:8080 https://api.youtube.com https://www.googleapis.com https://cdn.jsdelivr.net https://unpkg.com; 
+                 connect-src 'self' http://localhost:8000 http://localhost:8080 https://api.youtube.com https://www.googleapis.com https://cdn.jsdelivr.net https://unpkg.com https://api-staging-uploader.ynaqyal.info; 
                  frame-src 'self' https://www.youtube.com;
                  object-src 'none';
                  base-uri 'self';">
