--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
 
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
-                 script-src 'self' 'unsafe-inline' 'unsafe-eval' https://code.jquery.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:8080; 
+                 script-src 'self' 'unsafe-inline' 'unsafe-eval' https://code.jquery.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:8080 http://analytics.staging-uploader.ynaqyal.info; 
                  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://unpkg.com; 
                  font-src 'self' https://fonts.gstatic.com; 
                  img-src 'self' data: https: http:; 
-                 connect-src 'self' http://localhost:8000 http://localhost:8080 https://api.youtube.com https://www.googleapis.com https://cdn.jsdelivr.net https://unpkg.com; 
+                 connect-src 'self' http://localhost:8000 http://localhost:8080 https://api.youtube.com https://www.googleapis.com https://cdn.jsdelivr.net https://unpkg.com http://analytics.staging-uploader.ynaqyal.info; 
                  frame-src 'self' https://www.youtube.com;
                  object-src 'none';
                  base-uri 'self';">
@@ -35,6 +35,10 @@
   <!-- Leaflet CSS for map component -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+
+  <!-- Plausible Analytics -->
+  <script defer data-domain="staging-uploader.ynaqyal.info"
+    src="http://analytics.staging-uploader.ynaqyal.info/js/script.js"></script>
 </head>
 
 <body class="mat-typography" lang="ar" dir="rtl">
